fixing nav spacing

--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -3,10 +3,6 @@
 }
 
 .wrapper {
- padding: 20px;
-}
-
-.wrapper {
     padding: 20px;
 }
 
